--- a/index.html
+++ b/index.html
@@ -128,6 +128,6 @@
           });
       });
     </script>
-  <a href ="showdata.html"> <h2>show data</h2></a>
+  <a href ="https://fuadahmed66.github.io/form/showdata.html"> <h2>show data</h2></a>
   </body>
 </html>
