--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       });
     </script>
   <a href ="https://fuadahmed66.github.io/form/showdata.html"> <h2>show data</h2></a>
-      <a href ="https://fuadahmed66.github.io/form/crud/crud.html"> <h2>show CRUD</h2></a>
+      <a href ="https://fuadahmed66.github.io/form/crud.html"> <h2>show CRUD</h2></a>
 
   </body>
 </html>
