--- a/index.html
+++ b/index.html
@@ -129,6 +129,6 @@
       });
     </script>
   <a href ="https://fuadahmed66.github.io/form/showdata.html"> <h2>show data</h2></a>
-    <a href ="https://fuadahmed66.github.io/form/crud.html"> <h2>show crud</h2></a>
+    <a href ="https://github.com/fuadahmed66/form/blob/crud/crud.html"> <h2>show crud</h2></a>
   </body>
 </html>
